role & role_binding.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: app-sa
  namespace: ckad-ns
  
  
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: pod-reader
  namespace: ckad-ns
rules:
- apiGroups: [""]
  resources: ["pods"]
  verbs: ["get", "list", "watch"]

# RoleBinding

apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: pod-reader-binding
  namespace: ckad-ns
subjects:
- kind: ServiceAccount
  name: app-sa
  namespace: ckad-ns
roleRef:
  kind: Role
  name: pod-reader
  apiGroup: rbac.authorization.k8s.io


# Deployment


apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-app
  namespace: ckad-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-app
  template:
    metadata:
      labels:
        app: secure-app
    spec:
      serviceAccountName: app-sa
      containers:
      - name: nginx
        image: nginx:latest
		
		
		
#kubectl create role pod-reader \
  --verb=get --verb=list --verb=watch \
  --resource=pods \
  -n ckad-ns

#kubectl create rolebinding pod-reader-binding \
  --role=pod-reader \
  --serviceaccount=ckad-ns:app-sa \
  -n ckad-ns
