secrets.yaml
#kubectl create secret generic db-secret --from-literal=DB_PASSWORD=SuperSecret123 -n ckad-ns
  
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo
  namespace: ckad-ns
spec:
  containers:
  - name: app
    image: busybox
    command: ["sh", "-c", "echo $DB_PASSWORD && cat /etc/secret-volume/DB_PASSWORD"]
    volumeMounts:
    - name: secret-vol
      mountPath: /etc/secret-volume
      readOnly: true
  volumes:
  - name: secret-vol
    secret:
      secretName: db-secret
