nginx_deployment+ service.yml
# nginx-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80


## kubectl create deployment nginx-deployment --image=nginx --replicas=3 --port=8080


#service.yaml of type:nodeport to expose it

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort 
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30001
    
# service.yml of type:clusterIP

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP 
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80    


# kubectl create service clusterip nginx-service --tcp=80:80 --dry-run=client -o yaml > service.yml    

# cmd to expose deployment file with nodeport service
# kubectl expose deployment nginx-deployment --type=NodePort --port=80 --target-port=80 --name=nginx-service

# cmd to expose deployment file with clusterIP service:
# kubectl expose deployment nginx-deployment --type=ClusterIP --port=80 --target-port=80 --name=nginx-service
